apps/production/apps/media/sonarr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: media
spec:
  parentRefs:
    - name: home-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - sonarr.home.lewelly.com
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authelia-forwardauth
            namespace: traefik
      backendRefs:
        - name: sonarr
          port: 8989
